Fix samples-tab info-box layout: flex-wrap + order for full-width display

--- a/src/app/shared/components/project-detail/project-samples-tab/project-samples-tab.component.scss
+++ b/src/app/shared/components/project-detail/project-samples-tab/project-samples-tab.component.scss
@@ -4,7 +4,13 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  flex-wrap: wrap;
   margin-bottom: 16px;
+
+  app-info-box {
+    flex-basis: 100%;
+    order: -1;
+  }
 }
 
 .search-box {
